// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Preset Snapshot - default with counter 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": false,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden flex-row items-center border rounded py-1.5 grow-0 border-f0-border gap-1.5 pl-2.5 pr-1.5"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <Text
    className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground text-left"
  >
    Label
  </Text>
  <View
    className="flex items-center justify-center rounded-xs grow-0 min-w-5 p-0.5 bg-f0-background-secondary border border-f0-border-secondary"
  >
    <Text
      className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground text-center"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      3
    </Text>
  </View>
</View>
`;

exports[`F0Preset Snapshot - default without counter 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": false,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden flex-row items-center border rounded py-1.5 grow-0 border-f0-border px-2.5"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <Text
    className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground text-left"
  >
    Label
  </Text>
</View>
`;

exports[`F0Preset Snapshot - selected with counter 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden flex-row items-center border rounded py-1.5 grow-0 bg-f0-background-selected-secondary border-f0-border-selected gap-1.5 pl-2.5 pr-1.5"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <Text
    className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground-selected text-left"
  >
    Label
  </Text>
  <View
    className="flex items-center justify-center rounded-xs grow-0 min-w-5 p-0.5 bg-f0-background-selected-bold"
  >
    <Text
      className="tabular-nums no-underline normal-case tracking-normal text-[12px] leading-[16px] font-medium text-f0-foreground-inverse text-center"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      12
    </Text>
  </View>
</View>
`;

exports[`F0Preset Snapshot - selected without counter 1`] = `
<View
  accessibilityLabel="Label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden flex-row items-center border rounded py-1.5 grow-0 bg-f0-background-selected-secondary border-f0-border-selected px-2.5"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <Text
    className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-medium text-f0-foreground-selected text-left"
  >
    Label
  </Text>
</View>
`;
